CSS z-index issue
1. CSS standard updated
2. PDM - side nav hover
3. Settings - side nav hover
4. Financial Metrics - INR font size

--- a/assets/css/standard/template.css
+++ b/assets/css/standard/template.css
@@ -44,6 +44,9 @@ span{
 .justify_l{
 	justify-content: left !important;
 }
+.justify_e{
+    justify-content: end;
+}
 .justify_sb{
 	justify-content: space-between !important;
 }
